mocha/system/signoz/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth-signoz
  namespace: signoz
spec:
  basicAuth:
    secret: basic-auth-signoz
