mocha/system/signoz/otlp-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signoz-otlp
  namespace: signoz
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
    traefik.ingress.kubernetes.io/router.tls.options: signoz-mtls@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: signoz-ingest.<path:kv/cluster#domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: signoz-otel-collector
                port:
                  number: 4318
  tls:
    - secretName: signoz-otlp-tls
      hosts:
        - signoz-ingest.<path:kv/cluster#domain>
